/-----------\
  CHANGELOG
\-----------/

v0.71
=====
- Fix crash in SDL renderer triggered by certain screen resolutions
- Update FSF address in license text

v0.70
=====
- Fix 'Cache_Dealloc:: not allocated' error on invalid QW skins
- Fix some translucent alias model rendering bugs in the x86 assembly
- Fix some invalid GL api usage (thanks Jelle Raaijmakers)

v0.69
=====
- Add support for scaling the software renderer output by a factor of 2 or 4
- Add translucent HUD support ("scr_sbaralpha")
- Add support for OpenGL vertex program animation interpolation
- Add support for OpenGL fragment program water surface warping
- Add support for OpenGL buffer objects to improve rendering performance
- Add support for DXT texture compression (greatly helps low-memory systems)
- Add vsync support for most platforms ("vid_vsync")
- Add anisotropic filtering for OpenGL ("gl_texture_anisotropy")
- Add back the vid mode test functionality
- Add cl_maxpitch and cl_minpitch console variables (default 90/-90)
- Improve FOV calculations to work better with widescreen aspect ratios
- Improved dynamic lighting performance on OpenGL (removed redundant updates)
- Fix a few software renderer entity alpha bugs
- Fix a few more texture reloading bugs in OpenGL
- Fix framerate on windows when compiled with SDL video/input
- Fix a few model/sprite clipping bugs the could crash the software renderer

v0.68
=====
- Fix compilation of x86 on unix variant when using ASM
- Fix the assembly patch process for translucent alias models
- Fix crash caused by missing flush of overflow sfx on level change
- Fix crash caused by missing flush of overflow models on level change
- Fix gl texture leak when alias models are pushed out of the cache due
  to memory pressure.
- Make the default zone size relative to the overall memory size

v.067
=====
- Added (finally) loading new mods at runtime with the 'game' command.
- Added ability to play music tracks from sound files.  Currently ogg