@@ -42,90 +42,6 @@ SwapPCX(pcx_t *pcx)
     pcx->palette_type = LittleShort(pcx->palette_type);
 }
 
-
-/*
-==============
-WritePCXfile
-==============
-*/
-void
-WritePCXfile(const char *filename, const byte *data, int width, int height,
-	     int rowbytes, const byte *palette, qboolean upload)
-{
-    int i, j, length;
-    pcx_t *pcx;
-    byte *pack;
-
-    pcx = Hunk_TempAlloc(width * height * 2 + 1000);
-
-    pcx->identifier = 0x0A;	// PCX id
-    pcx->version = 5;		// 256 color
-    pcx->encoding = 1;		// uncompressed
-    pcx->bits_per_pixel = 8;	// 256 color
-    pcx->xmin = 0;
-    pcx->ymin = 0;
-    pcx->xmax = width - 1;
-    pcx->ymax = height - 1;
-    pcx->hres = width;
-    pcx->vres = height;
-    memset(pcx->palette, 0, sizeof(pcx->palette));
-    pcx->color_planes = 1;	// chunky image
-    pcx->bytes_per_line = width;
-    pcx->palette_type = 1;	// not a grey scale
-    memset(pcx->reserved2, 0, sizeof(pcx->reserved2));
-
-    SwapPCX(pcx);
-
-    // pack the image
-    pack = pcx->data;
-
-#ifdef GLQUAKE
-    // The GL buffer addressing is bottom to top?
-    data += rowbytes * (height - 1);
-    for (i = 0; i < height; i++) {
-	for (j = 0; j < width; j++) {
-	    if ((*data & 0xC0) != 0xC0) {
-		*pack++ = *data++;
-	    } else {
-		*pack++ = 0xC1;
-		*pack++ = *data++;
-	    }
-	}
-	data += rowbytes - width;
-	data -= rowbytes * 2;
-    }
-#else
-    for (i = 0; i < height; i++) {
-	for (j = 0; j < width; j++) {
-	    if ((*data & 0xC0) != 0xC0) {
-		*pack++ = *data++;
-	    } else {
-		*pack++ = 0xC1;
-		*pack++ = *data++;
-	    }
-	}
-	data += rowbytes - width;
-    }
-#endif
-
-    // write the palette
-    *pack++ = 0x0C;		// palette ID byte
-    for (i = 0; i < 768; i++)
-	*pack++ = *palette++;
-
-    // write output file
-    length = pack - (byte *)pcx;
-
-#ifdef QW_HACK
-    if (upload) {
-	CL_StartUpload((byte *)pcx, length);
-	return;
-    }
-#endif
-
-    COM_WriteFile(filename, pcx, length);
-}
-
 #ifdef GLQUAKE
 
 typedef struct {
